# dec

./: CMakeLists.txt
include/: dec.h  g_dec_internal.h  g_dec_reducer.h  g_dec_reducer_f.h  g_dec_serv.h  g_dec_serv_f.h  g_dec_util_f.h  g_dec_worker.h  g_dec_worker_f.h
src/: .#g_dec_util.c  _client.c  _dec.c  _reducer.c  _serv.c  _worker.c  g_dec_reducer.c  g_dec_serv.c  g_dec_util.c  g_dec_worker.c
